@@ -289,7 +289,8 @@ table#list_events th {
 	font-weight: bolder !important;
 }
 
-@media screen and (max-width: 320px)
+/*
+@media screen and (max-width: 25em)
 {
 	.pandora_responsive th {
 		padding-right: 10px;
@@ -411,6 +412,7 @@ table#list_events th {
 		width: 300px;
 	}
 }
+*/
 
 #list_events a {
 	color: #333333 !important;
